registry-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry
  labels:
    app: docker-registry
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: registry.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: docker-registry
              servicePort: 5000
  tls:
    - hosts:
      - registry.example.com
